--- a/director/general.conf
+++ b/director/general.conf
@@ -1,7 +1,7 @@
 include file("site.conf")
 
-name: ${PREFIX}-Training201809
-deploymentName: ${PREFIX}-Training201809
+name: ${PREFIX}-HA
+deploymentName: ${PREFIX}-HA
 
 provider {
     instanceNamePrefix: ${PREFIX}
@@ -16,9 +16,3 @@ ssh {
 include file("cloudera-manager.conf")
 
 include file("services/core.conf")
-//include file("services/kudu.conf")
-include file("services/impala.conf")
-//include file("services/hbase.conf")
-//include file("services/solr.conf")
-include file("services/sentry.conf")
-include file("services/cdsw.conf")
