--- a/director/site.conf
+++ b/director/site.conf
@@ -1,30 +1,26 @@
-PREFIX: "trng"
+PREFIX: "intuit"
 USER: "centos"
-HDFS_NAMESERVICE: trng201809
-DOMAIN: "trng201809.lab"
-REALM: "TRNG201809.LAB"
-CDSW_DOMAIN: "cdsw.trng201809.lab"
+HDFS_NAMESERVICE: hanameservice
 LOAD_BALANCER: "trng-lb.trng201809.lab"
-LDAP_URL: "ldaps://trng2018-ad.trng201809.lab:3269"
-ADMIN_GROUP: cloudera_admins
-USER_GROUP: cloudera_users
-GROUP_BASE: "OU=groups,OU=trng,OU=cloudera,DC=trng201809,DC=lab"
-USER_BASE: "DC=trng201809,DC=lab"
-SERVICE_BASE: "OU=services,OU=trng,OU=cloudera,DC=trng201809,DC=lab"
-KDC_HOST: "trng2018-ad.trng201809.lab"
-LDAP_BIND_DN: "ldapbind"
-LDAP_BIND_PW: "xxxxxx"
-KRB_SCM_USER: "trng-cm"
-KRB_SCM_PWD: "yyyyyyy"
+HIVE_SERVER_LOAD_BALANCER_PORT: "10000"
 LICENSE_FILE: "license.txt"
-CM_ADMIN_PWD: "zzzzzz"
-PROXY: "10.7.0.5"
-PROXY_PORT: 3128
-DB_TYPE: mysql
-DB_HOST: "10.7.0.12"
-DB_PORT: "3306"
-DB_ADMIN: "adminis"
-DB_ADMIN_PWD: "qqqqqq"
-PRIVATE_KEY: "/home/adminis/.ssh/id_rsa"
-JAVA_HOME: "/usr/java/jdk1.8.0_141"
+CM_ADMIN_PWD: "cloudera"
+DB_TYPE: "mysql"
+DB_ADMIN: "cloudera"
+DB_ADMIN_PWD: "cloudera"
+DB_HOST: toby-rds.cfuzrvhqdmqv.us-west-2.rds.amazonaws.com
+DB_PORT: 3306
+PRIVATE_KEY: "/Users/toby/.ssh/toby-aws-west-2.pem"
+SPREAD_PLACEMENT_GROUP: "spg"
+CLUSTER_PLACEMENT_GROUPA: "pga"
+CLUSTER_PLACEMENT_GROUPB: "pgb"
+CLUSTER_PLACEMENT_GROUPC: "pgc"
+SUBNETA: "subnet-062cf93f830767283"
+SUBNETB: "subnet-07da891c59e78eaa9"
+SUBNETC: "subnet-0a83de1604fbeb7f2"
+RACKIDA: "/us-west-2a"
+RACKIDB: "/us-west-2b"
+RACKIDC: "/us-west-2c"
+SECURITY_GROUPS_IDS: "sg-0fb2a2a87b46625af"
+
 
