--- a/director/cloudera-manager.conf
+++ b/director/cloudera-manager.conf
@@ -7,43 +7,18 @@ cloudera-manager {
         }
         datadisks: 3
         ebsVolumeCount: 3
-        bootstrapScripts: [ """#! /usr/bin/env bash
-        exit 0
-    """]
+	rackId: ${RACKIDA}
+	subnetId: ${SUBNETA}
     }
 
     licensePath: ${LICENSE_FILE}
-    enableEnterpriseTrial: false
-    unlimitedJce: false
+    enableEnterpriseTrial: true
+    unlimitedJce: true
     javaInstallationStrategy: NONE
     tlsEnabled: true
-    port: 7183
-    tlsConfigurationProperties: {
-      ca_key_args: 2048
-      host_key_args: 2048
-      subject_suffix: "/C=US/ST=Virginia/L=Tysons/O=Cloudera/OU=FCE"
-      ca_name: "Hadoop CA"
-      trusted_ca_certs: /opt/cloudera/security/pki/ca-certs.pem
-    }
 
     repository: "http://archive.cloudera.com/cm5/redhat/7/x86_64/cm/5.15/"
     repositoryKeyUrl: "http://archive.cloudera.com/cm5/redhat/7/x86_64/cm/RPM-GPG-KEY-cloudera"
-
-    csds: [
-        "https://archive.cloudera.com/spark2/csd/SPARK2_ON_YARN-2.3.0.cloudera3.jar",
-        "https://archive.cloudera.com/cdsw1/1.4.0/csd/CLOUDERA_DATA_SCIENCE_WORKBENCH-CDH5-1.4.0.jar"
-    ]
-
-    # Kerberos Credentials
-    krbAdminUsername: ${KRB_SCM_USER}"@"${REALM}
-    krbAdminPassword: ${KRB_SCM_PWD}
-
-    postCreateScripts: ["""#! /usr/bin/env bash
-    rm -f /sbin/yum
-    """${JAVA_HOME}"""/bin/keytool -importcert -noprompt -keystore """${JAVA_HOME}"""/jre/lib/security/jssecacerts -alias ClusterCA -storepass changeit -file /var/lib/cloudera-scm-agent/agent-cert/cm-auto-in_cluster_ca_cert.pem
-
-exit 0
-    """]
 
   databaseTemplates {
     CLOUDERA_MANAGER {
@@ -83,35 +58,6 @@ exit 0
   }
 
     configs {
-        CLOUDERA_MANAGER {
-            enable_faster_bootstrap: true
-            KDC_TYPE: "Active Directory"
-            KDC_HOST: ${KDC_HOST}
-            SECURITY_REALM: ${REALM}
-            AD_KDC_DOMAIN: ${SERVICE_BASE}
-            AD_ACCOUNT_PREFIX: "svc-"
-            KRB_MANAGE_KRB5_CONF: false
-            KRB_DNS_LOOKUP_KDC: "false"
-            ENABLE_EMBEDDED_DB_CHECK: false
-            AUTH_BACKEND_ORDER : "LDAP_ONLY"
-            LDAP_ADMIN_GROUPS: ${ADMIN_GROUP}
-            LDAP_BIND_DN : ${LDAP_BIND_DN}"@"${REALM}
-            LDAP_BIND_PW : ${LDAP_BIND_PW}
-            LDAP_GROUP_SEARCH_BASE : ${GROUP_BASE}
-            LDAP_GROUP_SEARCH_FILTER: "(member={0})"
-            LDAP_TYPE : "LDAP"
-            LDAP_NAVIGATOR_ADMIN_GROUPS : ${ADMIN_GROUP}
-            LDAP_URL : ${LDAP_URL}
-            LDAP_USER_GROUPS : ${USER_GROUP}
-            LDAP_USER_SEARCH_BASE : ${USER_BASE}
-            LDAP_USER_SEARCH_FILTER : "(samAccountName={0})"
-            AD_DELETE_ON_REGENERATE: "true"
-            AD_SET_ENCRYPTION_TYPES: "true"
-            KRB_ENC_TYPES: "aes256-cts"
-            parcel_proxy_port: ${PROXY_PORT}
-            parcel_proxy_server: ${PROXY}
-
-        }
         # CLOUDERA_MANAGEMENT_SERVICE corresponds to the Service-Wide configuration options
         CLOUDERA_MANAGEMENT_SERVICE {
          enable_alerts : false
@@ -124,8 +70,7 @@ exit 0
           firehose_storage_dir: "/data1/cloudera-service-monitor"
         }
        
-        # ACTIVITYMONITOR { ... }
-        
+
         HOSTMONITOR { 
 #          firehose_heapsize : 2147483648
           firehose_non_java_memory_bytes : 2147483648
@@ -140,30 +85,5 @@ exit 0
           eventserver_index_dir: "/data0/cloudera-scm-eventserver"
         }
         
-        #ALERTPUBLISHER { 
-        #}
-        
-        NAVIGATOR {
-#          navigator_heapsize : 4294967296
-        }
-        
-        NAVIGATORMETASERVER { 
-          navigator_heapsize : 4294967296
-          auth_backend_order : "CM_THEN_EXTERNAL"
-          nav_ldap_bind_dn : ${LDAP_BIND_DN}"@"${REALM}
-          nav_ldap_bind_pw : ${LDAP_BIND_PW}
-          nav_ldap_group_search_base : ${GROUP_BASE}
-          nav_ldap_group_search_filter : "(member={0})"
-          nav_ldap_groups_search_filter : "(&(objectClass=group)(cn=*{0}*))"
-          nav_ldap_url : ${LDAP_URL}
-          nav_ldap_user_search_base : ${USER_BASE}
-          nav_ldap_user_search_filter : "(&(objectClass=user)(samAccountName={0}))"
-          data_dir: "/data2/cloudera-scm-navigator"
-
-        }
-        
-        # Configuration properties for all hosts
-        # HOSTS { ... }
      }
-
 }
