Commented out license file

--- a/director/cloudera-manager.conf
+++ b/director/cloudera-manager.conf
@@ -11,7 +11,7 @@ cloudera-manager {
 	subnetId: ${SUBNETA}
     }
 
-    licensePath: ${LICENSE_FILE}
+#    licensePath: ${LICENSE_FILE}
     enableEnterpriseTrial: true
     unlimitedJce: true
     javaInstallationStrategy: NONE
