Corrected ssh key path

--- a/director/site.conf
+++ b/director/site.conf
@@ -10,7 +10,7 @@ DB_ADMIN: "cloudera"
 DB_ADMIN_PWD: "cloudera"
 DB_HOST: toby-rds.cfuzrvhqdmqv.us-west-2.rds.amazonaws.com
 DB_PORT: 3306
-PRIVATE_KEY: "/Users/toby/.ssh/toby-aws-west-2.pem"
+PRIVATE_KEY: "/home/centos/.ssh/toby-aws-west-2.pem"
 SPREAD_PLACEMENT_GROUP: "spg"
 CLUSTER_PLACEMENT_GROUPA: "pga"
 CLUSTER_PLACEMENT_GROUPB: "pgb"
