--- a/director/aws.conf
+++ b/director/aws.conf
@@ -7,7 +7,7 @@ environmentName: ${PREFIX} Environment
 # Cloud provider configuration (credentials, region or zone and optional default image)
 provider {
     type: aws
-    region: eu-west-1
+    region: us-west-2
     accessKeyId: ${AWS_ACCESS_KEY_ID}
     secretAccessKey: ${AWS_SECRET_ACCESS_KEY}
     rootVolumeSizeGB: 100
