--- a/director/services/core.conf
+++ b/director/services/core.conf
@@ -137,7 +137,7 @@ cluster {
 
 	    }
 	}
-	include file("services/master.conf"), include file("services/aza.conf")
+	include file("services/aza.conf")
         count: 1
 	instance.placementGroup: ${SPREAD_PLACEMENT_GROUP}
     }
@@ -180,63 +180,152 @@ cluster {
         count: 1
 	instance.placementGroup: ${SPREAD_PLACEMENT_GROUP}
     }
-    masterc { include file("services/masternnn.conf"), 
-	      instance: ${instances.master} {
-		  tags {
-		      group: masters
-		  }
-		  dataDiskCount: 3
-		  ebsVolumeCount: 3
-		  ebsVolumeType: gp2
-	      }
-
-	      roles {
-		  HDFS: [FAILOVERCONTROLLER, JOURNALNODE]
-		  ZOOKEEPER: [SERVER]
-		  YARN: [JOBHISTORY, RESOURCEMANAGER]
-		  HIVE: [HIVESERVER2, HIVEMETASTORE]
-	      }
-
-	      configs {
-		  ZOOKEEPER {
-		      SERVER: ${roleconfigs.ZOOKEEPER.SERVER}
-		  }
-		  HDFS {
-		      JOURNALNODE: ${roleconfigs.HDFS.JOURNALNODE}
-		  }
-		  YARN {
-		      RESOURCEMANAGER: ${roleconfigs.YARN.RESOURCEMANAGER}
-		  }
-		  HIVE {
-		      HIVEMETASTORE: ${roleconfigs.HIVE.HIVEMETASTORE}
-		      HIVESERVER2: ${roleconfigs.HIVE.HIVESERVER2}
-		  }
-	      }
-
-	      include file("services/azc.conf")
-              count: 1
-	      instance.placementGroup: ${SPREAD_PLACEMENT_GROUP}
+    masterc { 
+	instance: ${instances.master} {
+	    tags {
+		group: masters
 	    }
+	    dataDiskCount: 3
+	    ebsVolumeCount: 3
+	    ebsVolumeType: gp2
+	}
 
+	roles {
+	    HDFS: [FAILOVERCONTROLLER, JOURNALNODE]
+	    ZOOKEEPER: [SERVER]
+	    YARN: [JOBHISTORY, RESOURCEMANAGER]
+	    HIVE: [HIVESERVER2, HIVEMETASTORE]
+	}
 
-    gateway { include file("services/gateway.conf"), include file("services/aza.conf")
-              count: 1
+	configs {
+	    ZOOKEEPER {
+		SERVER: ${roleconfigs.ZOOKEEPER.SERVER}
 	    }
+	    HDFS {
+		JOURNALNODE: ${roleconfigs.HDFS.JOURNALNODE}
+	    }
+	    YARN {
+		RESOURCEMANAGER: ${roleconfigs.YARN.RESOURCEMANAGER}
+	    }
+	    HIVE {
+		HIVEMETASTORE: ${roleconfigs.HIVE.HIVEMETASTORE}
+		HIVESERVER2: ${roleconfigs.HIVE.HIVESERVER2}
+	    }
+	}
 
-    workersa { include file("services/worker.conf"), include file("services/aza.conf")
-               count: 3
-               minCount: 3
-	       instance.placementGroup: ${CLUSTER_PLACEMENT_GROUPA}
+	include file("services/azc.conf")
+        count: 1
+	instance.placementGroup: ${SPREAD_PLACEMENT_GROUP}
+    }
 
-	     }
-    workersb { include file("services/worker.conf"), include file("services/azb.conf")
-               count: 3
-               minCount: 3
-	       instance.placementGroup: ${CLUSTER_PLACEMENT_GROUPB}
-	     }
-    workersc { include file("services/worker.conf"), include file("services/azc.conf")
-               count: 3
-               minCount: 3
-	       instance.placementGroup: ${CLUSTER_PLACEMENT_GROUPC}
-	     }
+
+    gateway { 
+	instance: ${instances.edge} {
+            tags {
+                group: gateway
+            }
+            dataDiskCount: 1
+            dataDiskSizeGb: 500
+            ebsVolumeCount: 1
+            ebsVolumeType: st1
+        }
+
+        roles {
+            YARN: [GATEWAY]
+            HIVE: [GATEWAY]
+        }
+        configs {
+            YARN {
+		GATEWAY: ${roleconfigs.YARN.GATEWAY}
+            }
+	}
+	include file("services/aza.conf")
+        count: 1
+    }
+
+    workersa {
+        instance: ${instances.worker} {
+            tags {
+                group: worker
+            }
+            dataDiskCount: 4
+            dataDiskSizeGb: 500
+            ebsVolumeCount: 4
+            ebsVolumeType: st1 
+        }
+
+        roles {
+            HDFS: [DATANODE]
+            YARN: [NODEMANAGER]
+        }
+        configs {
+            HDFS {
+		DATANODE: ${roleconfigs.HDFS.DATANODE}
+            }
+            YARN {
+		NODEMANAGER: ${roleconfigs.YARN.NODEMANAGER}
+            }
+        }
+	include file("services/aza.conf")
+        count: 3
+        minCount: 3
+	instance.placementGroup: ${CLUSTER_PLACEMENT_GROUPA}
+
+    }
+    workersb {
+        instance: ${instances.worker} {
+            tags {
+                group: worker
+            }
+            dataDiskCount: 4
+            dataDiskSizeGb: 500
+            ebsVolumeCount: 4
+            ebsVolumeType: st1 
+        }
+
+        roles {
+            HDFS: [DATANODE]
+            YARN: [NODEMANAGER]
+        }
+        configs {
+            HDFS {
+		DATANODE: ${roleconfigs.HDFS.DATANODE}
+            }
+            YARN {
+		NODEMANAGER: ${roleconfigs.YARN.NODEMANAGER}
+            }
+        }
+	include file("services/azb.conf")
+        count: 3
+        minCount: 3
+	instance.placementGroup: ${CLUSTER_PLACEMENT_GROUPB}
+    }
+    workersc {
+        instance: ${instances.worker} {
+            tags {
+                group: worker
+            }
+            dataDiskCount: 4
+            dataDiskSizeGb: 500
+            ebsVolumeCount: 4
+            ebsVolumeType: st1 
+        }
+
+        roles {
+            HDFS: [DATANODE]
+            YARN: [NODEMANAGER]
+        }
+        configs {
+            HDFS {
+		DATANODE: ${roleconfigs.HDFS.DATANODE}
+            }
+            YARN {
+		NODEMANAGER: ${roleconfigs.YARN.NODEMANAGER}
+            }
+        }
+	include file("services/azc.conf")
+        count: 3
+        minCount: 3
+	instance.placementGroup: ${CLUSTER_PLACEMENT_GROUPC}
+    }
 }
