Added owner tag

--- a/director/aws.conf
+++ b/director/aws.conf
@@ -22,6 +22,7 @@ common-instance-properties {
 
 
     tags {
+        owner: ${OWNER}
         OS: Linux
         Role: "Cloudera Enterprise"
         Lifecycle: Production
