added new ami with jdk 1.8

--- a/director/aws.conf
+++ b/director/aws.conf
@@ -12,11 +12,11 @@ provider {
     secretAccessKey: ${AWS_SECRET_ACCESS_KEY}
     rootVolumeSizeGB: 100
     rootVolumeType: gp2 
-    associatePublicIpAddresses: false
+    associatePublicIpAddresses: true
 }
 
 common-instance-properties {
-    image: ami-072b2125629f91156
+    image: ami-0404ac3f8c2accef1
     rootVolumeSizeGB: 500   # defaults to 50 GB if not specified
     securityGroupsIds: ${SECURITY_GROUPS_IDS}
 
@@ -29,7 +29,7 @@ common-instance-properties {
         AppID: AAAAAA-PR001
         Project: Intuit PoC
     }
-    bootstrapScriptsPaths: ["scripts/bootstrap-chronyd.sh","scripts/bootstrap-java.sh" ]
+    bootstrapScriptsPaths: ["scripts/bootstrap-chronyd.sh" ]
 }
 
 instances {
