Removed excess RESOURCEMANAGER and FAILOVERCONTROLLER

--- a/director/services/core.conf
+++ b/director/services/core.conf
@@ -121,9 +121,9 @@ jhmaster {
 
 
     roles {
-	HDFS: [FAILOVERCONTROLLER, JOURNALNODE]
+	HDFS: [JOURNALNODE]
 	ZOOKEEPER: [SERVER]
-	YARN: [JOBHISTORY, RESOURCEMANAGER]
+	YARN: [JOBHISTORY]
 	HIVE: [HIVESERVER2, HIVEMETASTORE]
     }
 
@@ -133,9 +133,6 @@ jhmaster {
 	}
 	HDFS {
 	    JOURNALNODE: ${roleconfigs.HDFS.JOURNALNODE}
-	}
-	YARN {
-	    RESOURCEMANAGER: ${roleconfigs.YARN.RESOURCEMANAGER}
 	}
 	HIVE {
 	    HIVEMETASTORE: ${roleconfigs.HIVE.HIVEMETASTORE}
