Added support for IAM role

--- a/director/aws.conf
+++ b/director/aws.conf
@@ -8,11 +8,13 @@ environmentName: ${PREFIX} Environment
 provider {
     type: aws
     region: us-west-2
-    accessKeyId: ${AWS_ACCESS_KEY_ID}
-    secretAccessKey: ${AWS_SECRET_ACCESS_KEY}
     rootVolumeSizeGB: 100
     rootVolumeType: gp2 
     associatePublicIpAddresses: true
+# Choose one form of authentication (IAM) or the other (key/password)
+    iamProfileName: APaasClouderaProd
+#    accessKeyId: ${AWS_ACCESS_KEY_ID}
+#    secretAccessKey: ${AWS_SECRET_ACCESS_KEY}
 }
 
 common-instance-properties {
