--- a/director/site.conf
+++ b/director/site.conf
@@ -1,6 +1,8 @@
+SUFFIX: "1"
 OWNER: "toby"
 PREFIX: "intuit"
 USER: "centos"
+IAM_PROFILE: "iam_profile"
 HDFS_NAMESERVICE: hanameservice
 LOAD_BALANCER: "trng-lb.trng201809.lab"
 HIVE_SERVER_LOAD_BALANCER_PORT: "10000"
@@ -23,5 +25,5 @@ RACKIDA: "/us-west-2a"
 RACKIDB: "/us-west-2b"
 RACKIDC: "/us-west-2c"
 SECURITY_GROUPS_IDS: "sg-0fb2a2a87b46625af"
-
+AMI_ID: "ami-123"
 
