Changes for CDH 6

--- a/director/cloudera-manager.conf
+++ b/director/cloudera-manager.conf
@@ -17,8 +17,8 @@ cloudera-manager {
     javaInstallationStrategy: NONE
     tlsEnabled: true
 
-    repository: "http://archive.cloudera.com/cm5/redhat/7/x86_64/cm/5.15/"
-    repositoryKeyUrl: "http://archive.cloudera.com/cm5/redhat/7/x86_64/cm/RPM-GPG-KEY-cloudera"
+    repository: ${CM_URL}
+    repositoryKeyUrl: ${CM_KEY_URL}
 
   databaseTemplates {
     CLOUDERA_MANAGER {
