--- a/director/services/core.conf
+++ b/director/services/core.conf
@@ -171,11 +171,11 @@ worker_def {
 # Cluster description
 cluster {
     products {
-        CDH: 5
+        CDH: ${CDH}
     }
 
     parcelRepositories: [
-        "http://archive.cloudera.com/cdh5/parcels/5.15/"
+        ${PARCEL_REPO}
     ]
 
 
