--- a/director/site.conf
+++ b/director/site.conf
@@ -1,5 +1,5 @@
 OWNER: "toby"
-PREFIX: "intuit"
+PREFIX: "intuit_CDH6_2"
 USER: "centos"
 HDFS_NAMESERVICE: hanameservice
 LOAD_BALANCER: "trng-lb.trng201809.lab"
@@ -11,7 +11,7 @@ DB_ADMIN: "cloudera"
 DB_ADMIN_PWD: "cloudera"
 DB_HOST: toby-rds.cfuzrvhqdmqv.us-west-2.rds.amazonaws.com
 DB_PORT: 3306
-PRIVATE_KEY: "/home/centos/.ssh/toby-aws-west-2.pem"
+PRIVATE_KEY: "/home/centos/toby-aws-west-2.pem"
 SPREAD_PLACEMENT_GROUP: "spg"
 CLUSTER_PLACEMENT_GROUPA: "pga"
 CLUSTER_PLACEMENT_GROUPB: "pgb"
@@ -25,3 +25,7 @@ RACKIDC: "/us-west-2c"
 SECURITY_GROUPS_IDS: "sg-0fb2a2a87b46625af"
 
 
+PARCEL_REPO: "https://archive.cloudera.com/cdh6/6.0.0/parcels"
+CM_URL: "https://archive.cloudera.com/cm6/6.0.0/redhat7/yum"
+CM_KEY_URL: "https://archive.cloudera.com/cm6/6.0.0/redhat7/yum/RPM-GPG-KEY-cloudera"
+CDH: 6
