Swapped IAM for access key

--- a/director/aws.conf
+++ b/director/aws.conf
@@ -12,9 +12,9 @@ provider {
     rootVolumeType: gp2 
     associatePublicIpAddresses: true
 # Choose one form of authentication (IAM) or the other (key/password)
-    iamProfileName: APaasClouderaProd
-#    accessKeyId: ${AWS_ACCESS_KEY_ID}
-#    secretAccessKey: ${AWS_SECRET_ACCESS_KEY}
+#    iamProfileName: APaasClouderaProd
+    accessKeyId: ${AWS_ACCESS_KEY_ID}
+    secretAccessKey: ${AWS_SECRET_ACCESS_KEY}
 }
 
 common-instance-properties {
